--- a/lectures/25_machine_learning_3.tex
+++ b/lectures/25_machine_learning_3.tex
@@ -147,7 +147,7 @@
   \end{frame}
 }
 
-\title[]{\textcolor{blue}{Supervised Machine Learning II: \\ Heterogeneous Treatment Effects}} \author[PGP]{}
+\title[]{\textcolor{blue}{Supervised Machine Learning III: \\ Unstructured and Unsupervised ML}} \author[PGP]{}
 \institute[FRBNY]{\small{\begin{tabular}{c}
                            Paul Goldsmith-Pinkham  \\
 \end{tabular}}}
@@ -470,12 +470,11 @@
       \begin{itemize}
       \item The priors are necessary for estimation!
       \end{itemize}
-    \item As a result, choice of prior can move your results a bit
+    \item As a result, choice of prior can move your results 
       \begin{itemize}
       \item Many empiricists might feel uncomfortable with this
       \end{itemize}
     \end{wideitemize}
-        \end{wideitemize}
       \end{column}%
       \hfill%
       \begin{column}{.5\textwidth}
