--- a/syllabus.tex
+++ b/syllabus.tex
@@ -387,10 +387,16 @@ ECON 550, ECON 551
       Treatment Effects In Randomized Experiments, With An Application
       To Immunization In India'' Chernozhukov et al. (2020)
     \end{itemize}
-  \item Unsupervised Machine Learning
+  \item Unstructured Data and Unsupervised Machine Learning 
     \begin{itemize}
     \item ``Text as Data'', Kelly, Gentzkow and Taddy (2020)
     \item ``Measuring Technological Innovation Over the Long Run'', Kelly et al. (2020)
+    \item ``Parsing the content of bank supervsision'', Goldsmith-Pinkham, Hirtle and Lucca (2017)
+    \item ``Grouped Patterns of Heterogeneity in Panel Data'', Bonhomme and Manresa (2015)
+    \item ``Computer Vision and Real Estate: Do Looks Matter and Do Incentives Determine Looks'', Glaeser, Kincaid, and Naik (2018)
+    \item ``Word Power: A New Approach for Content Analysis'', Jegadeesh and Wu (2013)
+    \item ``Text Selection'', Kelly, Manela and Moreira (2020)
+    \item ``The Structure of Economic News'', Bybee et al. (2020)
     \end{itemize}
   \end{enumerate}
 \item \underline{Miscellaneous}
@@ -401,6 +407,11 @@ ECON 550, ECON 551
     \item ``Confidence intervals for partially identified parameters'' Imbens and Manski (2004)
     \item ``Inference on regressions with interval data on a regressor or outcome'' Manski and Tamer (2002)
     \item ``Estimation and Confidence Regions for Parameter Sets in Econometric Models'' Chernozhukov, Hong and Tamer (2007)
+    \item ``Training, Wages, and Sample Selection: Estimating Sharp Bounds on Treatment Effects'' Lee (2009)
+    \item ``Better Lee Bounds'' Semenova (2020)      
+    \item ``Monotone Treatment Response'' Manski (1997)
+    \item ``Partial Identification in Econometrics'', Tamer (2010)
+    \item ``Microeconometrics with Partial Identification'', Molinari (2020)
     \end{itemize}
   \end{enumerate}
 \end{enumerate}
