--- a/lectures/00_intro.tex
+++ b/lectures/00_intro.tex
@@ -211,14 +211,14 @@
     \begin{itemize}
     \item See syllabus for details
     \end{itemize}
-  \item There are no required readings, but the papers that I have
-    listed in the syllabus are relevant to the material we will cover
-    in class.
+  \item There are no required readings, but the papers listed in the
+    syllabus are relevant to the material we will cover in class.
   \item I also highly recommend the following texts:
     \begin{itemize}
     \item Angrist and  Pischke, Mostly Harmless Econometrics
-    \item  Cunningham, Causal Inference: The Mixtape, https://mixtape.scunning.com/
     \item  Miller and Aronow, Foundations of Agnostic Statistics
+    \item  Cunningham, Causal Inference: The Mixtape, https://mixtape.scunning.com/
+    \item Imbens and Rubin, Causal Inference for Statistics, Social, and Biomedical Sciences      
     \end{itemize}
   \end{wideitemize}
 \end{column}%
@@ -239,17 +239,16 @@
 \begin{columns}[T] % align columns
 \begin{column}{.7\textwidth}
   \begin{wideitemize}
-  \item This is my first time teaching this course
+  \item This is my second time teaching this course
     \begin{itemize}
     \item There will be growing pains!
-    \item Especially with homeworks
     \end{itemize}
   \item In the end, this is a graduate course targetted at making you a good empirical researcher
   \item My goal is to exposed to a wide range of empirical methods,
     and understand how they connect.
     \begin{itemize}
     \item We will not drill down deeply into some material
-    \item I am happy to discuss it more outsie of class
+    \item I am happy to discuss it more outside of class
     \end{itemize}
   \item I will also emphasize how to communicate the econometrics underlying your research ideas
     \begin{itemize}
@@ -279,5 +278,11 @@
   \end{wideitemize}
 \end{frame}
 
+
+\begin{frame}{Introductions!}
+    \resizebox{\linewidth}{!}{
+      \includegraphics{images/map.jpeg}
+    }
+\end{frame}
 
 \end{document}
