--- a/lectures/01_po_dags.tex
+++ b/lectures/01_po_dags.tex
@@ -647,7 +647,7 @@ the data''\\
     \begin{wideitemize}
     \item One more example before formalizing the goal
       \begin{itemize}
-      \item $X$ is now a ``collider'' (note direction of arrows
+      \item $X$ is now a ``collider'' (note direction of arrows)
       \end{itemize}
     \item Examine the paths by which $D$ links to $Y$:
       \begin{itemize}
