--- a/lectures/04_interference_dynamics.tex
+++ b/lectures/04_interference_dynamics.tex
@@ -148,7 +148,6 @@
 \title[]{\textcolor{blue}{Interference, Spillovers and Dynamics}}
 \author[PGP]{}
 \institute[FRBNY]{\small{Paul Goldsmith-Pinkham}}
-\date{\today}
 
 
 \begin{document}
@@ -351,6 +350,33 @@
       exploits the most amount of data?
     \item Most important: \emph{what is identifiable}?
     \end{itemize}
+  \end{column}
+\end{columns}
+\end{frame}
+
+
+
+\begin{frame}{Extending PO into multi-valued treatments - multiple treatments}
+\begin{columns}[T] % align columns
+  \begin{column}{.6\textwidth}
+    \begin{wideitemize}
+    \item When there are multiple (unordered) treatments, it is
+      important to have clarity on what your estimand is
+    \item Consider a case where you have $K$ teachers that you can
+      assign in a classroom
+      \begin{itemize}
+      \item What is the relevant treatment estimand?
+      \item What would you want to report?
+      \end{itemize}
+      \pause 
+    \item We will discuss in linear regression issues that can arise
+      with these settings if you are not careful (see
+      Goldsmith-Pinkham, Hull and Koles\'ar (2021) for a discussion)
+\end{wideitemize}    
+
+\end{column}%
+  \hfill%
+  \begin{column}{.4\textwidth}
   \end{column}
 \end{columns}
 \end{frame}
